--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "remixicon": "^4.6.0",
-    "socket.io": "^4.8.1"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
